--- a/language/portuguese-brazilian/index.html
+++ b/language/portuguese-brazilian/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>403 Forbidden</title>
+	<title>403 Proíbido</title>
 </head>
 <body>
 
-<p>Directory access is forbidden.</p>
+<p>O acesso ao diretório é proíbido.</p>
 
 </body>
 </html>
